# discord-scheduler

./: Cargo.toml  README.md
src/: main.rs
